Fixed minor issues and typo words